--- a/quasar-project/package.json
+++ b/quasar-project/package.json
@@ -11,28 +11,28 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "@quasar/extras": "^1.17.0",
-    "axios": "^1.7.9",
-    "pinia": "^2.3.1",
-    "quasar": "^2.18.5",
-    "vue": "^3.5.22",
-    "vue-router": "^4.6.3"
+    "@quasar/extras": "^1.0.0",
+    "axios": "^0.27.2",
+    "pinia": "^2.0.21",
+    "quasar": "^2.6.0",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0"
   },
   "devDependencies": {
-    "@quasar/app-vite": "^2.4.0",
-    "@types/node": "^24.8.1",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-vue": "^9.33.0",
-    "prettier": "^3.6.2",
-    "typescript": "^5.9.3"
+    "@quasar/app-vite": "^1.0.0",
+    "@types/node": "^12.20.21",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "autoprefixer": "^10.4.2",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-vue": "^9.0.0",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.4"
   },
   "engines": {
-    "node": ">=20.17.0",
-    "npm": ">= 10.0.0",
+    "node": "^18 || ^16 || ^14.19",
+    "npm": ">= 6.13.4",
     "yarn": ">= 1.21.1"
   }
 }
