--- a/quasar-project/package.json
+++ b/quasar-project/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.17.0",
+    "@types/three": "^0.180.0",
     "axios": "^1.7.9",
     "pinia": "^2.3.1",
     "quasar": "^2.18.5",
+    "three": "^0.180.0",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
   },
